--- a/Jistar/Base.lproj/Main.storyboard
+++ b/Jistar/Base.lproj/Main.storyboard
@@ -134,7 +134,7 @@
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CYo-3e-UU3">
                                 <rect key="frame" x="167" y="137" width="80" height="80"/>
-                                <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="8Cp-bd-FR6"/>
                                     <constraint firstAttribute="height" constant="80" id="Edq-fy-aDt"/>
